[package]
name = "DB_todo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.140"

dotenvy = "0.15.7"

tokio = { version = "1.45.1",features = ["full"] }
sea-orm = "1.1.12"


migration = {path = "migration"}
